@@ -4181,6 +4181,11 @@ password=P@ssW0rd!
                     <td>Set this property if a modification has occurred. For use
                         in conditionally controlling the build later.</td>
                 </tr>
+                <tr>
+                    <td>multiVob</td>
+                    <td>No</td>
+                    <td>Set whether the view contains multiple vobs. Defaults to false.</td>
+                </tr>
             </tbody>
         </table>
 
